update readme and disable snappy; fix producer timestamp

--- a/generator/ElectronProducer.ipynb
+++ b/generator/ElectronProducer.ipynb
@@ -11,7 +11,8 @@
     "import random\n",
     "import numpy as np\n",
     "import time\n",
-    "import os, binascii"
+    "import os, binascii\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -86,6 +87,9 @@
     "def generate_id():\n",
     "    return binascii.b2a_hex(os.urandom(8)).decode('utf-8')\n",
     "\n",
+    "def toiso(ts):\n",
+    "    return datetime.fromtimestamp(ts).isoformat() + 'Z'\n",
+    "\n",
     "# Generate a set of signals for a randomly selected bed\n",
     "def generate_signals(units, beds, sources, channels, starting_values, sds):\n",
     "    # Select a random unit and bed from that unit\n",
@@ -97,13 +101,13 @@
     "    \n",
     "    # Create JSON message with 1 and 2 ms offsets for msh_ts and rcv_ts\n",
     "    data = {\n",
-    "        \"msh_ts\":ts+1,\n",
-    "        \"start_ts\":ts,\n",
+    "        \"msh_ts\":toiso(ts+1),\n",
+    "        \"start_ts\":toiso(ts),\n",
     "        \"unit\":unit,\n",
     "        \"bed\":bed,\n",
     "        \"src\":sources[unit],\n",
     "        \"msg_id\":generate_id(),\n",
-    "        \"helix_rcv_ts\":ts+2,\n",
+    "        \"helix_rcv_ts\":toiso(ts+2),\n",
     "        \"tz_offset\":0,\n",
     "        \"obx_objects\":[],\n",
     "        \"hl7\":\"HL7MESSAGE...\"\n",
