update producer and readme, add zeppelin nb

--- a/generator/ElectronProducer.ipynb
+++ b/generator/ElectronProducer.ipynb
@@ -120,6 +120,9 @@
     "        \n",
     "        value = np.random.normal(starting_values[bed+channel], sds[channel], 1)[0]\n",
     "        \n",
+    "        if channel == '2' and value > 100:\n",
+    "            value = 100\n",
+    "        \n",
     "        cur_signal = {\n",
     "            \"line\": z,\n",
     "            \"channel\": channel,\n",
